--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
         "php": "^7.3|^8.0",
         "barryvdh/laravel-dompdf": "^2.0",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.75",
+        "guzzlehttp/guzzle": "^7.0",
+        "laravel/framework": "^8.0",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.16"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
